--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,38 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-
+        
+        <dependency>
+        	<groupId>org.glassfish</groupId>
+        	<artifactId>jakarta.faces</artifactId>
+        	<version>4.0.9</version>        
+        </dependency>        
+        
+	    <!-- Java EE Servlet API -->
+	    <dependency>
+	        <groupId>jakarta.servlet</groupId>
+	        <artifactId>jakarta.servlet-api</artifactId>
+	        <version>5.0.0</version>
+	        <scope>provided</scope>
+	    </dependency>
+	
+	    <!-- JSTL -->
+	    <dependency>
+	        <groupId>jakarta.servlet.jsp.jstl</groupId>
+	        <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+	        <version>2.0.0</version>
+	    </dependency>
+	    
+	    <!-- JSF -->
+	    <dependency>
+	        <groupId>jakarta.faces</groupId>
+	        <artifactId>jakarta.faces-api</artifactId>
+	        <version>4.0.0</version>
+	        <scope>provided</scope>
+	    </dependency>
+      
+        
+        
     </dependencies>
     <build>
         <plugins>
